services/210.homepage/homepage.7.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    metallb.universe.tf/allow-shared-ip: uptime-kuma
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
