services/210.homepage/homepage.8.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
#    gethomepage.dev/description: ""
#    gethomepage.dev/enabled: "true"
#    gethomepage.dev/group: Services
#    gethomepage.dev/icon: homepage
#    gethomepage.dev/name: Homepage
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: home.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls:
    - hosts:
        - home.dni.sh
      secretName: home-dni-sh-certificate
